appId: com.ronicesarrc.performance.demo
---
- launchApp
- tapOn: "Animations"
- tapOn: "Vector"
- tapOn: "Show lottie remote animation"
- assertVisible:
    id: "lottieView-remote"
- tapOn: "Restart Animation"
- assertVisible:
    id: "lottieView-remote"