appId: com.ronicesarrc.performance.demo
---
- launchApp
- tapOn: "Animations"
- tapOn: "Vector"
- tapOn: "Show rive remote animation"
- assertVisible:
    id: "riveView-remote"
- tapOn: "Restart Animation"
- assertVisible:
    id: "riveView-remote"