appId: com.ronicesarrc.performance.demo
---
- launchApp
- tapOn: "Lists"
- tapOn: "List with two columns"
- tapOn: "Show flatList grid"
- runFlow:
    file: ../shared/scrollList.yaml