appId: com.ronicesarrc.performance.demo
---
- launchApp
- tapOn: "Lists"
- tapOn: "Long list"
- tapOn: "Show long list using ScrollView (slow)"
- runFlow:
    file: ../shared/scrollList.yaml
- tapOn: "Add item"